# plasmatic-coupled-pinn

./: .gitignore  README.md  model.py  pyproject.toml  trainer.py
configs/: adaptive.yaml  ccppinn_default.yaml  default.yaml  fourier.yaml  gated.yaml  hybrid.yaml  lbfgs_finetune.yaml  periodic.yaml  periodic_v100_adaptive.yaml  periodic_v40_adaptive.yaml  periodic_v40_stable.yaml  simplepinn.yaml
configs/physics/: v100.yaml  v40.yaml
docs/: CCP-II Model_10_31_update.docx  MODEL_ARCHITECTURE.md  VISUALIZATION.md
scripts/: run_parameter_sweep.py  staged_commits.sh  validate_experiments.py
src/: __init__.py  model.py  trainer.py  visualize.py
src/architectures/: __init__.py  activations.py  fourier.py  interpolators.py  networks.py  solvers.py
src/data/: __init__.py  collocation.py  fdm_solver.py  sampling.py
src/utils/: __init__.py  gradients.py  nondim.py  physics.py  richco.py  seed.py  wandb_logger.py
src/visualization/: __init__.py  gif_generator.py  plotting.py
